overflow :bug:

--- a/static/global.css
+++ b/static/global.css
@@ -19,13 +19,13 @@
 	--heading: 'Playfair Display', serif;
 }
 
-body {
+html, body {
 	margin: 0;
 	font-family: var(--body);
 	font-size: 14px;
 	line-height: 1.2;
 	color: var(--black);
-	width: 100vw;
+	max-width: 100vw;
 	overflow-x: hidden;
 }
 
